Poprawa menu strony projekt - usunięcie przycisklu /learn more/

--- a/src/main/resources/templates/projekt.html
+++ b/src/main/resources/templates/projekt.html
@@ -8,17 +8,15 @@
 </head>
 <body>
 <header>
-    <div class="logo"><a th:href="@{/index}">Dziennik</a></div>
+    <div class="logo"><a href="/index">Dziennik</a></div>
     <nav>
         <ul>
-            <li><a th:href="@{/studentList}">Student</a></li>
-            <li><a th:href="@{/zadanieList}">Zadanie</a></li>
-            <li><a th:href="@{/projektList}">Projekt</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="/studentList">Student</a></li>
+            <li><a href="/zadanieList">Zadanie</a></li>
+            <li><a href="/projektList">Projekt</a></li>
             <li><a href="/logout" class="btn-light">Wyloguj</a></li>
         </ul>
     </nav>
-    <a href="#" class="btn-green">Learn More</a>
 </header>
 <section>
     <h1>Lista projektów</h1>
