--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -26,7 +26,7 @@
         <a href="/studentAdd" class="btn-green">Dodaj studenta</a>
 
         <form action="/studentList" method="get" style="display:flex; gap:10px;">
-            <input type="text" name="keyword" placeholder="Szukaj (Indeks, Email)..."
+            <input type="text" name="keyword" placeholder="Szukaj (Nazwisko lub indeks)..."
                    style="padding: 10px; border-radius: 8px; border: 1px solid #ccc; width: 300px;">
             <button type="submit" class="btn-green">Szukaj</button>
             <a href="/studentList" class="btn-light">Reset</a>
