--- a/src/main/resources/templates/zadanie-edit.html
+++ b/src/main/resources/templates/zadanie-edit.html
@@ -32,18 +32,14 @@
             <label>Kolejność:</label>
             <input type="number" th:field="*{kolejnosc}" required>
 
-            <label>Przypisz studentów (Przytrzymaj CTRL, aby wybrać kilku):</label>
-            <select th:field="*{studentIds}" multiple="multiple"
-                    style="width:100%; height: 150px; padding:10px; border-radius:8px; border:1px solid #ddd; margin-bottom:20px; background-color: white;">
-
-                <option th:each="st : ${listaStudentow}"
-                        th:value="${st.studentId}"
-                        th:text="'[' + ${st.nrIndeksu} + '] ' + ${st.imie} + ' ' + ${st.nazwisko}">
+            <label>Projekt:</label>
+            <select th:field="*{projekt.projektId}"
+                    style="width:100%; padding:10px; border-radius:8px; border:1px solid #ddd; margin-bottom:20px; background-color: white;">
+                <option th:each="projekt : ${listaProjektow}"
+                        th:value="${projekt.projektId}"
+                        th:text="${projekt.nazwa}">
                 </option>
             </select>
-            <p style="font-size: 12px; color: #666; margin-top: -15px; margin-bottom: 20px;">
-                💡 Подсказка: Чтобы выбрать нескольких студентов, зажми клавишу <b>CTRL</b> и кликай по именам.
-            </p>
 
             <button type="submit" class="btn-green">Zapisz</button>
             <a href="/zadanieList" class="btn-light">Anuluj</a>
