--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -40,6 +40,7 @@
             <th>Imię i Nazwisko</th>
             <th>Email</th>
             <th>Tryb studiów</th>
+            <th>Edytuj</th>
         </tr>
         </thead>
         <tbody>
@@ -51,6 +52,9 @@
                 <span th:text="${student.stacjonarny ? 'Stacjonarne' : 'Niestacjonarne'}"
                       style="background: #e8f5e9; color: #2e7d32; padding: 5px 10px; border-radius: 15px; font-size: 12px; font-weight: bold;">
                 </span>
+            </td>
+            <td>
+                <a th:href="@{/studentEdit(studentId=${student.studentId})}" class="btn-green">Edytuj</a>
             </td>
         </tr>
         </tbody>
