--- a/src/main/resources/templates/zadanie-edit.html
+++ b/src/main/resources/templates/zadanie-edit.html
@@ -10,7 +10,7 @@
     <div class="logo"><a href="/index">Dziennik</a></div>
     <nav>
         <ul>
-            <li><a href="/studentList">Student</a></li>
+            <li><a th:href="${isAdmin} ? '/studentList' : '/studentProfile'">Student</a></li>
             <li><a href="/zadanieList">Zadanie</a></li>
             <li><a href="/projektList">Projekt</a></li>
         </ul>
