--- a/src/main/resources/templates/projekt.html
+++ b/src/main/resources/templates/projekt.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <div class="logo"><a href="/index">Dziennik</a></div>
+    <div class="logo"><a th:href="${isAuthenticated} ? '/projektList' : '/index'">Dziennik</a></div>
     <nav>
         <ul>
             <li><a th:href="${isAdmin} ? '/studentList' : '/studentProfile'">Student</a></li>
