--- a/src/main/resources/templates/zadanie.html
+++ b/src/main/resources/templates/zadanie.html
@@ -49,7 +49,7 @@
 
             <td>
                 <a th:href="@{/zadanieEdit(zadanieId=${zadanie.zadanieId})}" class="btn-green">Edytuj</a>
-                <a th:href="@{/zadanieDelete(zadanieId=${zadanie.zadanieId})}" style="color: red; margin-left: 10px;">Usuń</a>
+                <a th:href="@{/zadanieDelete(zadanieId=${zadanie.zadanieId})}" class="btn-red-small" style="margin-left: 10px;">Usuń</a>
             </td>
         </tr>
         </tbody>
